welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:12: error: type mismatch;
 found   : Unit
 required: Int
  if (vitesse>80){
  ^